--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,3 +41,10 @@ body{
 .ld{
     font-size: 25px;
 }
+footer{
+    font-size: 30px;
+    text-align: center;
+    height: 100px;
+    background-color: aliceblue;
+    text-
+}
