--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -112,3 +112,33 @@ footer{
     color: #EC4067;
     font-size: 19px;
 }
+.webb{
+    color: #EC4067;
+    font-size: 25px;
+}
+.h3{
+    font-size: 25px;
+}
+.column {
+    float: left;
+    width: 25%;
+    padding: 0 0px;
+    
+}
+.row::after {
+    content: "";
+    display: table;
+    clear: both;
+}
+.card {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2); 
+    padding: 16px;
+    text-align: center;
+    background-color: #f1f1f1;
+    object-fit: cover;
+
+  }
+.row {
+    margin: 0 -5px;
+    width: auto;
+}
