--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,6 @@
 body{
     font-family: 'Nunito';
+    object-fit: contain;
 }
 .nav{
     font-size: 30px;
@@ -55,6 +56,9 @@ footer{
 .img{
     margin: 3%;
     position: relative;
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
 }
 .ck{
     position: absolute;
@@ -119,26 +123,32 @@ footer{
 .h3{
     font-size: 25px;
 }
-.column {
+.column{
     float: left;
     width: 25%;
     padding: 0 0px;
-    
+    object-fit: contain;
 }
 .row::after {
     content: "";
     display: table;
     clear: both;
 }
-.card {
+.card{
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2); 
     padding: 16px;
     text-align: center;
     background-color: #f1f1f1;
-    object-fit: cover;
 
   }
 .row {
     margin: 0 -5px;
     width: auto;
+}
+.img1{
+    float: right;
+    height: 400px;
+    width: 600px;
+    margin: 0px 0px 15px 20px;
+    object-fit: cover;
 }
