--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -53,13 +53,6 @@ footer{
     background-color: aliceblue;
     
 }
-.img{
-    margin: 3%;
-    position: relative;
-    width: 100%;
-    height: 100%;
-    object-fit: contain;
-}
 .ck{
     position: absolute;
     bottom: 1px;
@@ -68,21 +61,14 @@ footer{
     font-size: 30px;
     font: 'Nunito';
 }
-.top{
-    position: absolute;
-    top: 10px;
-    left: 1100px;
-    color: white;
-    font-size: 30px;
-    font: 'Nunito';
-}
-.img3{
+.bm{
     position: absolute;
     bottom: 1px;
-    left: 900px;
+    right: 900px;
     color: white;
     font-size: 30px;
     font: 'Nunito';
+    
 }
 .tl{
     position: absolute;
@@ -108,6 +94,8 @@ footer{
 }
 .p1{
     font-size: 30px;
+    position: center;
+    left: 100px;
 }
 .tm{
     font-size: 17px;
@@ -147,8 +135,53 @@ footer{
 }
 .img1{
     float: right;
-    height: 400px;
+    height: 300px;
     width: 600px;
     margin: 0px 0px 15px 20px;
+    object-fit: cover;
+}
+.img2{
+    float: left;
+    height: 300px;
+    width: 500px;
+    margin: 0px 50px 15px 20px;
+    object-fit: cover;
+}
+.imgtm{
+    margin: 3%;
+    position: relative;
+}
+.cl{
+    position: absolute;
+    left: 25px;
+    top: 230px;
+    color: white;
+    font-size: 20px;
+    font: 'Nunito';
+}
+.top{
+    position: absolute;
+    left: 490px;
+    top: auto;
+    color: white;
+    font-size: 30px;
+    font: 'Nunito';
+}
+.gfg {
+    margin: 0%;
+    position: relative;
+}
+.img4{
+    float: left;
+    height: 300px;
+    width: 500px;
+    margin: 0px 50px 15px 20px;
+    object-fit: cover;
+}
+.img3{
+    float: right;
+    height: 300px;
+    width: 500px;
+    margin: 0px 50px 15px 20px;
     object-fit: cover;
 }
