--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,6 +32,7 @@ body{
 
 .p1{
     width: 100%;
+    font-size: 25px;
 }
 .stor{
     font-size: 25px;
@@ -55,8 +56,8 @@ footer{
 }
 .ck{
     position: absolute;
-    bottom: 1px;
-    left: 10px;
+    top: 110px;
+    left: 20px;
     color: white;
     font-size: 30px;
     font: 'Nunito';
@@ -106,7 +107,7 @@ footer{
 }
 .webb{
     color: #EC4067;
-    font-size: 25px;
+    font-size: 40px;
 }
 .h3{
     font-size: 25px;
@@ -182,6 +183,20 @@ footer{
     float: right;
     height: 300px;
     width: 500px;
+    margin: 0px 50px 15px 20px;
+    object-fit: cover;
+}
+.img9{
+    float: right;
+    height: 400px;
+    width: 600px;
+    object-fit: cover;
+    margin: 0px 50px 15px 20px;
+}
+.img8{
+    float: center;
+    height: 200px;
+    width: 320px;
     margin: 0px 50px 15px 20px;
     object-fit: cover;
 }
