--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,7 +11,7 @@ body{
 }
 .cour{
     font-size: 20px;
-    text-align: right;
+    text-align: center;
 }
 .btn{
     font-size: 20px;
@@ -66,7 +66,7 @@ footer{
 .bm{
     position: absolute;
     top: 250px;
-    left: 1250px;
+    left: 1120px;
     color: white;
     font-size: 20px;
     font: 'Nunito';
